<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="textview">TextView</string>
    <string name="signup">Sign Up</string>
    <string name="Signupusername">Username</string>
    <string name="retype_password">Retype Password</string>
    <string name="email">Email</string>
    <string name="sign_me_up">Sign up</string>
    <string name="SignUppassword">Password</string>
    <string name="phone">Phone</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="reports">Reports</string>
    <string name="logout">Logout</string>
    <string name="invalid_name">Please enter a valid Name</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="invalid_password">Please enter a valid password</string>
    <string name="invalid_confirm_password">Password does not match</string>
    <string name="invalid_phone">Please enter a valid phone number</string>
</resources>